minor fixes -- subcat collapse fixed, used google fonts, just started with ordering

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
+
 * {
     margin: 0;
     padding: 0;
@@ -7,4 +9,5 @@
     height: 100vh;
     width: 100vw;
     background-color: white;
+    font-family: "Roboto", sans-serif;
 }
